# sigma-eclipse-llm

./: .dockerignore  .env.example  .eslintrc.cjs  .gitignore  CHANGELOG.md  CHANGELOG_NATIVE_MESSAGING.md  CODE_SIGNING.md  DOCKER_BUILD.md  Dockerfile.windows  Makefile  NATIVE_MESSAGING.md  QUICK_START_NATIVE_MESSAGING.md  README.md  docker-compose.yml  package-lock.json  package.json
.github/workflows/: release.yml
scripts/: build-native-host.sh  build-windows-docker.sh  bump-version.sh  docker-shell.sh
src/: App.css  App.tsx  main.tsx
src-tauri/: Cargo.toml  build.rs  entitlements.native-host.plist  entitlements.plist  tauri.conf.json  versions.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: download.rs  ipc_state.rs  lib.rs  main.rs  native_messaging.rs  paths.rs  server.rs  server_manager.rs  settings.rs  system.rs  types.rs
src-tauri/src/download/: download_utils.rs  llama_download.rs  mod.rs  model_download.rs
src/assets/: logo.xcf
src/components/: HeaderSection.css  HeaderSection.tsx  LogsSection.css  LogsSection.tsx  ProgressBar.css  ProgressBar.tsx  SettingsPanel.css  SettingsPanel.tsx  StartButton.css  StartButton.tsx  StatusPanel.css  StatusPanel.tsx  ThemeSwitcher.css  ThemeSwitcher.tsx  UpdateDialog.css  UpdateDialog.tsx  index.ts
src/hooks/: index.ts  useApp.ts  useAutoDownload.ts  useDownloadProgress.ts  useLogs.ts  useModelDownload.ts  useServerControl.ts  useServerStatus.ts  useSettings.ts  useTheme.ts  useUpdater.ts
src/styles/: code-styles-block.css  custom-media-queries.css  globals.css  index.css  (+6 more)
(+3 files in other folders)
