[package]
name = "sigma-eclipse"
version = "0.1.6"
description = "A Tauri App"
authors = ["you"]
edition = "2021"
default-run = "sigma-eclipse"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "sigma_eclipse_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[[bin]]
name = "sigma-eclipse-host"
path = "src/bin/native_messaging_host.rs"

[build-dependencies]
tauri-build = { version = "2", features = [] }
dotenvy = "0.15"

[dependencies]
tauri = { version = "2", features = ["tray-icon", "image-ico", "image-png"] }
tauri-plugin-opener = "2"
tauri-plugin-log = "2"
tauri-plugin-single-instance = "2"
log = "0.4"
chrono = "0.4"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", features = ["stream"] }
zip = { version = "0.6", default-features = false, features = ["deflate"] }
dirs = "5.0"
anyhow = "1.0"
futures-util = "0.3"
tauri-plugin-fs = "2"
sysinfo = "0.30"
tauri-plugin-process = "2"
sha2 = "0.10"

[target.'cfg(unix)'.dependencies]
libc = "0.2"

[target.'cfg(windows)'.dependencies]
windows = { version = "0.58", features = ["Win32_Foundation", "Win32_Storage_FileSystem"] }
winreg = "0.52"

